--- a/offline/leaderboard.html
+++ b/offline/leaderboard.html
@@ -5,10 +5,13 @@
     <script src="./js/libs/action_cable.js" ></script>
     
     <!-- Class-->
-    <script src="./js/leaderboard.js" ></script>
     <script src="./js/data.js" ></script>
     <script src="./js/datastorage.js" ></script>
-    
+    <script src="./js/leaderboard.js" ></script>
+    <script>
+      var leaderBoard = new LeaderBoard();
+      leaderBoard.setup();
+    </script>
     <link href="./css/leaderboard.css" />
   </head>
   <body>
