--- a/offline/leaderboard.html
+++ b/offline/leaderboard.html
@@ -4,6 +4,7 @@
     <script src="./js/libs/handlebars.min-v4.7.2.js" ></script>
     <script src="./js/libs/action_cable.js" ></script>
     
+    <script src="./js/constants.js" ></script>
     <!-- Class-->
     <script src="./js/datastorage.js" ></script>
     <script src="./js/data.js" ></script>
@@ -14,15 +15,16 @@
   </head>
   <body>
     <h1>LeaderBoard</h1>
+    <div class='lastlap-intro'>LASTLAP</div>
     <div id="leaderboard-wrapper"></div>
 
     <script id="leaderboard-template" type="text/x-handlebars-template">
       {{#each people}}
         <div class='leaderboard-item'>
-          <div>{{this.position}}</div>
-          <div style="background-color: {{this.car_colour}}">{{this.car_number}}</div>
-          <div>{{this.driver_name}}</div>
-          <div>{{this.last_lap}}</div>
+          <div class='position' >{{this.position}}</div>
+          <div class='car_number' style="background-color: {{this.car_colour}}">{{this.car_number}}</div>
+          <div class='name'>{{this.driver_name}}</div>
+          <div class='lastlap'>{{this.last_lap}}</div>
         </div>
       {{/each}}
     </script>  
